# housing_price_predictor

./: README.md  data.xlsx  pyproject.toml
docs/source/: conf.py  index.rst
housing_price_predictor/: main.py
source/: index.rst
src/classes/: House.py
src/utils/: data.xlsx  file_io.py
tests/: test_functions.py  test_predict.py
