[tool.poetry]
name = "housing_price_predictor"
version = "0.1.0"
description = "housing"
authors = ["Alyaa Mossa"]
license = "yes"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

pytest = "^8.3.2"
ruff = "^0.5.7"
sphinx = "^8.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-v"
